--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,29 @@
+/* Для всех тегов <p> на странице */
 p {
-  font-size: 25px;  /* Размер текста 25px */
-  color: red;     /* Цвет текста красный */
+  font-size: 20px;  /* Размер текста 25px */
+}
+
+/* Для всех тегов <div> на странице */
+div {
+  width: 280px; /* Установим ширину блока в 280px */
+  border: 0px solid black; /* Рамка блока */
+
+  border-radius: 16px; /* Скруглим края на 16px */
+  box-shadow: 1px 1px 10px 4px rgba(158, 158, 158, 128);
+  
+  margin: 16px;  /* Отступы снаружи блока div */
+}
+
+/* Для всех тегов <p> и <h1> но ВНУТРИ тега <div>  */
+div p,h1 {
+  padding-left: 10px; /* Отступы внутри блока div слева */
+  padding-right: 10px; /* Отступы внутри блока div справа*/
+  padding-bottom: 10px; /* Отступы внутри блока div снизу */
+}
+
+/* Для всех тегов <img> на странице */
+img {
+  width: 100%; /* Ширина изображения в процентах от родителя (от div) */
+  border-top-left-radius: 16px; /* Скруглим края сверху и слева */
+  border-top-right-radius: 16px; /* Скруглим края сверху и справа */
 }
